tests/smt2/error/arg_mismatch3.smt2
(declare-fun f (Bool) Bool)
(assert f)